fix: sign up innteests selction page dark mode setting amd auth input colors on dark mode

--- a/src/pages/blog/post_details/post.details.module.scss
+++ b/src/pages/blog/post_details/post.details.module.scss
@@ -82,3 +82,14 @@
     }
   }
 }
+
+.hero_sec {
+  background: url("../../../assets/blogBG.svg");
+  background-color: #f2fff5;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 100px;
+  margin-top: 1rem;
+}
